--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@ target
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
-
+.idea
+javascript-quickstart-application.iml
 # User-specific stuff:
 .idea/**/workspace.xml
 .idea/**/tasks.xml
